--- a/COMPLETE/Soo/main/main.scss
+++ b/COMPLETE/Soo/main/main.scss
@@ -385,14 +385,14 @@ section.innerbox {
 
     & .wrap {
         & div {
-            width: 79vw;
+            width: 79.5vw;
             height: 52vw;
             position: absolute;
             top: 0vw;
             opacity: 0;
         }
         & .red {
-            background-color: red;
+            background-color: #f25c54;
 
             & img {
                 position: absolute;
@@ -402,7 +402,7 @@ section.innerbox {
         }
 
         & .orange {
-            background-color: orange;
+            background-color: #ff8c42;
 
             & img {
                 position: absolute;
@@ -412,7 +412,7 @@ section.innerbox {
         }
 
         & .yellow {
-            background-color: yellow;
+            background-color: #f9dc5c;
 
             & img {
                 position: absolute;
@@ -422,7 +422,7 @@ section.innerbox {
         }
 
         & .green {
-            background-color: green;
+            background-color: #76c893;
 
             & img {
                 position: absolute;
@@ -432,7 +432,7 @@ section.innerbox {
         }
 
         & .sky {
-            background-color: skyblue;
+            background-color: #90caf9;
 
             & img {
                 position: absolute;
@@ -442,7 +442,7 @@ section.innerbox {
         }
 
         & .violet {
-            background-color: violet;
+            background-color: #e5b3fe;
 
             & img {
                 position: absolute;
@@ -452,7 +452,7 @@ section.innerbox {
         }
 
         & .black {
-            background-color: black;
+            background-color: #212529;
 
             & img {
                 position: absolute;
@@ -464,28 +464,277 @@ section.innerbox {
 
     & #btns {
         position: absolute;
-        top: 5vw;
-        width: 6vw;
-        border: 2px solid red;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        top: 43vw;
+        left: 12.5vw;
+        width: 55vw;
+        // border: 2px solid red;
         font-size: 2vw;
         cursor: pointer;
         z-index: 999;
+        text-align: center;
 
         & .btn {
             width: 5vw;
             height: 5vw;
-            background-color: red;
-            border-radius: 50%;
+            // background-color: red;
+            // border-radius: 50%;
+        }
+
+        & .btn_orange {
+            margin-right: 2.5vw;
+            // position: absolute;
+            // left: 10vw;
+            // background-color: red;
+            // border-radius: 50%;
+        }
+
+        & .btn_yellow {
+            margin-right: 1.5vw;
+            // position: absolute;
+            // left: 10vw;
+            // background-color: red;
+            // border-radius: 50%;
         }
     }
 }
 
-#fourth .wrap .on {
-    // animation: 5000 forwards ease;
+.btn_red {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-50%);
+        content: "";
+        width: 100%;
+        height: 3px;
+        background-color: #f25c54;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 110%;
+        }
+    }
 }
 
-// @keyframes show {
-//     (opacity: 0),
-//     opacity: 1;
-//     opacity: 1;
-// } ;
+.btn_yellow {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-45%);
+        content: "";
+        width: 130%;
+        height: 3px;
+        background-color: #f9dc5c;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 130%;
+        }
+    }
+}
+
+.btn_orange {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-40%);
+        content: "";
+        width: 150%;
+        height: 3px;
+        background-color: #ff8c42;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 150%;
+        }
+    }
+}
+
+.btn_green {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-47%);
+        content: "";
+        width: 120%;
+        height: 3px;
+        background-color: #76c893;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 120%;
+        }
+    }
+}
+
+.btn_sky {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-50%);
+        content: "";
+        width: 100%;
+        height: 3px;
+        background-color: #90caf9;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 100%;
+        }
+    }
+}
+
+.btn_violet {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-50%);
+        content: "";
+        width: 130%;
+        height: 3px;
+        background-color: #e5b3fe;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 130%;
+        }
+    }
+}
+
+.btn_black {
+    display: inline-block;
+    color: #343434;
+    transition: color 250ms, text-shadow 250ms;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+
+    position: relative;
+    z-index: 0;
+
+    &::after {
+        position: absolute;
+        z-index: -1;
+        bottom: 2vw;
+        left: 50%;
+        transform: translateX(-50%);
+        content: "";
+        width: 100%;
+        height: 3px;
+        background-color: #212529;
+        transition: all 250ms;
+    }
+
+    &:hover {
+        color: white;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 1);
+
+        &::after {
+            height: 65%;
+            width: 110%;
+        }
+    }
+}
