--- a/COMPLETE/Soo/main/main.scss
+++ b/COMPLETE/Soo/main/main.scss
@@ -6,6 +6,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -17,11 +18,11 @@ body {
 }
 // =====================================================================
 @import url("https://fonts.googleapis.com/css?family=Corben:700");
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800;900&display=swap");
 .bg {
     background-image: radial-gradient(50% 176%, #000000 80%, #061922 100%);
     // min-height: 100vh;
-    min-height: 3000vw;
+    min-height: 2000vw;
     position: relative;
     overflow: hidden;
     display: flex;
@@ -53,14 +54,14 @@ body {
 
 #star-top-layer {
     will-change: transform;
-    transform: translateY(-768px);
-    animation: fall 22.5s infinite linear;
+    transform: translateY(-10vw);
+    animation: fall 40s infinite linear;
 }
 
 #star-bottom-layer {
     will-change: transform;
-    transform: translateY(-768px);
-    animation: fall 45s infinite linear;
+    transform: translateY(-10vw);
+    animation: fall 80s infinite linear;
 }
 
 @keyframes fall {
@@ -76,36 +77,40 @@ body {
     left: 10vw;
     width: 80vw;
     height: 2000vw;
-    border: 5px solid #f8f8f8;
-    border-radius: 30px;
+    // border: 5px solid #f8f8f8;
+    // border-radius: 30px;
 }
 
 section.innerbox {
-    width: 100%;
-    height: 150vw;
-    background-color: lightpink;
-    border-radius: 23px;
-    &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 100vw;
-        left: 0px;
-        width: 100%;
-        height: 80vh;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(255, 255, 255, 1));
-    }
+    position: absolute;
+    left: 17.3vw;
+    width: 42vw;
+    height: 42vw;
+    background: linear-gradient(130deg, lightpink, rgb(179, 102, 102));
+    // border-radius: 23px;
+    border: 5px solid #f8f8f8;
+    border-radius: 50%;
+    // &::after {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     top: 100vw;
+    //     left: 0px;
+    //     width: 100%;
+    //     height: 80vh;
+    //     background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(255, 255, 255, 1));
+    // }
 }
 #intro {
     position: absolute;
     // border: 1px solid red;
 
-    top: 10vw;
-    left: 28vw;
+    top: 5vw;
+    left: 10.5vw;
 }
 
 .cls-1 {
-    stroke: black;
+    stroke: white;
     stroke-miterlimit: 10;
     stroke-width: 1px;
 }
@@ -203,7 +208,7 @@ section.innerbox {
     }
 
     to {
-        fill: black;
+        fill: white;
     }
 }
 
@@ -223,9 +228,13 @@ section.innerbox {
 .second {
     position: absolute;
     top: 138.7vw;
-    width: 100%;
-    height: 550vw;
+    left: -17vw;
+    width: 80vw;
+    height: 480vw;
     background-color: white;
+    border: 5px solid #f8f8f8;
+    border-radius: 30px;
+    font-family: "Noto Sans", sans-serif;
 
     & .red {
         // position: absolute;
@@ -280,32 +289,32 @@ section.innerbox {
         color: rgb(252, 26, 64);
     }
 
-    &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 500vw;
-        left: 0px;
-        width: 100%;
-        height: 100vh;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(18, 41, 67, 1));
+    // &::after {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     top: 500vw;
+    //     left: 0px;
+    //     width: 100%;
+    //     height: 100vh;
+    //     background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(18, 41, 67, 1));
 
-        // & .red .text1 {
-        //     z-index: 5;
-        // }
-        // & .red .text2 {
-        //     z-index: 4;
-        // }
-        // & .red .text3 {
-        //     z-index: 3;
-        // }
-        // & .red .text4 {
-        //     z-index: 2;
-        // }
-        // & .red .text5 {
-        //     z-index: 1;
-        // }
-    }
+    //     // & .red .text1 {
+    //     //     z-index: 5;
+    //     // }
+    //     // & .red .text2 {
+    //     //     z-index: 4;
+    //     // }
+    //     // & .red .text3 {
+    //     //     z-index: 3;
+    //     // }
+    //     // & .red .text4 {
+    //     //     z-index: 2;
+    //     // }
+    //     // & .red .text5 {
+    //     //     z-index: 1;
+    //     // }
+    // }
     // .second {
     //     &::before {
     //         content: "";
@@ -325,35 +334,40 @@ section.innerbox {
 .third {
     position: absolute;
     top: 687.1vw;
-    width: 100%;
-    height: 200vw;
+    left: -17vw;
+    width: 80vw;
+    height: 94.4vw;
     background-color: rgb(18, 41, 67);
     font-size: 9vw;
     color: rgb(15, 33, 53);
+    border: 5px solid #f8f8f8;
+    border-radius: 30px;
     text-shadow: 3px 3px 3px rgb(47, 75, 119);
+    font-family: "Noto Sans", sans-serif;
     // text-shadow: 6px 6px 7px rgba(166, 180, 200, 0.7), -6px -6px 6px rgba(255, 255, 255, 0.8);
 
     & .bbaegom1 {
+        border-radius: 23px;
         width: 100%;
     }
 
     & h1.from {
         position: absolute;
         top: 22vw;
-        left: 5vw;
+        left: 3vw;
     }
 
     & h1.the {
         position: absolute;
-        top: 24vw;
-        left: 30vw;
+        top: 23vw;
+        left: 27vw;
         font-size: 3vw;
     }
 
     & h1.birthday {
         position: absolute;
         top: 22vw;
-        left: 35vw;
+        left: 32vw;
     }
 
     & #count {
@@ -378,10 +392,14 @@ section.innerbox {
 //
 #fourth {
     position: absolute;
-    width: 100%;
-    height: 200vw;
+    width: 80vw;
+    height: 52.5vw;
     background-color: white;
     top: 1405vw;
+    left: -17vw;
+    border: 5px solid #f8f8f8;
+    border-radius: 30px;
+    font-family: "Noto Sans", sans-serif;
 
     & .wrap {
         & div {
@@ -390,75 +408,41 @@ section.innerbox {
             position: absolute;
             top: 0vw;
             opacity: 0;
-        }
-        & .red {
-            background-color: #f25c54;
+            border-radius: 23px;
 
             & img {
                 position: absolute;
-                right: 0;
-                top: 10vw;
+                left: 30vw;
+                top: 8vw;
+                border-radius: 2vw;
             }
+        }
+        & .red {
+            background-color: #f25c54;
         }
 
         & .orange {
             background-color: #ff8c42;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
 
         & .yellow {
             background-color: #f9dc5c;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
 
         & .green {
             background-color: #76c893;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
 
         & .sky {
             background-color: #90caf9;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
 
         & .violet {
             background-color: #e5b3fe;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
 
         & .black {
             background-color: #212529;
-
-            & img {
-                position: absolute;
-                right: 0;
-                top: 10vw;
-            }
         }
     }
 
@@ -475,6 +459,8 @@ section.innerbox {
         cursor: pointer;
         z-index: 999;
         text-align: center;
+        font-family: "Noto Sans", sans-serif;
+        font-weight: 500;
 
         & .btn {
             width: 5vw;
@@ -503,10 +489,10 @@ section.innerbox {
 
 .btn_red {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -519,7 +505,7 @@ section.innerbox {
         transform: translateX(-50%);
         content: "";
         width: 100%;
-        height: 3px;
+        height: 6px;
         background-color: #f25c54;
         transition: all 250ms;
     }
@@ -537,10 +523,10 @@ section.innerbox {
 
 .btn_yellow {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -553,7 +539,7 @@ section.innerbox {
         transform: translateX(-45%);
         content: "";
         width: 130%;
-        height: 3px;
+        height: 6px;
         background-color: #f9dc5c;
         transition: all 250ms;
     }
@@ -571,10 +557,10 @@ section.innerbox {
 
 .btn_orange {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -587,7 +573,7 @@ section.innerbox {
         transform: translateX(-40%);
         content: "";
         width: 150%;
-        height: 3px;
+        height: 6px;
         background-color: #ff8c42;
         transition: all 250ms;
     }
@@ -605,10 +591,10 @@ section.innerbox {
 
 .btn_green {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -621,7 +607,7 @@ section.innerbox {
         transform: translateX(-47%);
         content: "";
         width: 120%;
-        height: 3px;
+        height: 6px;
         background-color: #76c893;
         transition: all 250ms;
     }
@@ -639,10 +625,10 @@ section.innerbox {
 
 .btn_sky {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -655,7 +641,7 @@ section.innerbox {
         transform: translateX(-50%);
         content: "";
         width: 100%;
-        height: 3px;
+        height: 6px;
         background-color: #90caf9;
         transition: all 250ms;
     }
@@ -673,10 +659,10 @@ section.innerbox {
 
 .btn_violet {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -689,7 +675,7 @@ section.innerbox {
         transform: translateX(-50%);
         content: "";
         width: 130%;
-        height: 3px;
+        height: 6px;
         background-color: #e5b3fe;
         transition: all 250ms;
     }
@@ -707,10 +693,10 @@ section.innerbox {
 
 .btn_black {
     display: inline-block;
-    color: #343434;
+    color: transparent;
     transition: color 250ms, text-shadow 250ms;
     text-decoration: none;
-    text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
+    // text-shadow: 0px 1px 0px rgba(255, 255, 255, 1);
 
     position: relative;
     z-index: 0;
@@ -723,7 +709,7 @@ section.innerbox {
         transform: translateX(-50%);
         content: "";
         width: 100%;
-        height: 3px;
+        height: 6px;
         background-color: #212529;
         transition: all 250ms;
     }
