--- a/Min/mypage/mypage.css
+++ b/Min/mypage/mypage.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(../img/space.jpg);
+    background: url(../img/night-space-sky-stars-nebula-night-sky-71706-wallhere.com.jpg);
 }
 
 .lee {
