--- a/Min/random.css
+++ b/Min/random.css
@@ -14,7 +14,7 @@ font-family: 'Lobster', cursive; */
 body {
     width: 100%;
     height: 100vw;
-    background-image: url(../Min/img/space.jpg);
+    background-image: url(../Min/img/space2.jpg);
 }
 
 .random_page .scroll {
@@ -235,5 +235,18 @@ footer .footer_inner .save_icons {
 
 footer .footer_inner .save_icons i {
     font-size: 1.5vw;
-    color: pink;
+    color: pink
+}
+
+footer .footer_inner .team_member p {
+    position: absolute;
+    margin-top: 9vw;
+    left: 89vw;
+    color: black;
+    font-size: 0.8vw;
+    font-family:'Arvo';;
+    text-align: center;
+    background-color: pink;
+    padding: 0.5vw 1vw;
+    border-radius: 10px;
 }
