--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -721,7 +721,7 @@ section::after {
   height: 100vw;
   background-color: black;
   position: relative;
-  border: 2px solid #fff;
+  /* border: 2px solid #fff; */
 }
 /* #pg_5::before {
   content: "";
@@ -736,27 +736,95 @@ section::after {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(247, 94, 87, 1));
 } */
 
-#pg_4 .box-with-text {
-  background-image: url(./img/bgUniverse.jpg);
-  width: 100%;
-  height: 100vw;
+/* #pg_4 .box-with-text {
+  background-image: url(./img/nebula1.png);
+  width: 150vw;
+  height: 50vw;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+
 .box-with-text {
   position: absolute;
   top: 70%;
   left: 50%;
-  /* -webkit-transform: translateX(-50%) translateY(-50%);
-    -ms-transform: translateX(-50%) translateY(-50%); */
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
   /* 요소의 공백을 어떻게 처리할까? */
-  white-space: nowrap;
+/* white-space: nowrap;
   background-position: 50% 50%;
   text-align: center;
   text-transform: uppercase;
   font: 15vw/1 Open Sans, impact;
-}
+} */
 
 /* 강지훈부분 끝 */
+
+.arrows {
+  /**/
+  position: absolute;
+  bottom: 48vw;
+  right: 3vw;
+  /**/
+  width: 15vw;
+  height: 15vw;
+  z-index: 999;
+  /* cursor: pointer; */
+}
+
+.arrows::before {
+  content: "";
+  position: absolute;
+  width: 3.3vw;
+  height: 3.3vw;
+  border-left: 3.3vw solid rgba(255, 255, 255, 0.5);
+  border-bottom: 3.3vw solid rgba(255, 255, 255, 0.5);
+  transform: translate(3.3vw, 13.2vw) rotate(-135deg);
+  animation: arrows 2s linear infinite -2s;
+  z-index: 999;
+  cursor: pointer;
+}
+
+@keyframes arrows {
+  0% {
+    border-left: 3.3vw solid rgba(255, 255, 255, 0.5);
+    border-bottom: 3.3vw solid rgba(255, 255, 255, 0.5);
+    transform: translate(-2.6vw, 0) rotate(-135deg);
+  }
+
+  10%,
+  90% {
+    border-left: 3.3vw solid rgba(255, 255, 255, 0.5);
+    border-bottom: 3.3vw solid rgba(255, 255, 255, 0.5);
+  }
+
+  50% {
+    border-left: 3.3vw solid rgba(255, 255, 255, 0.5);
+    border-bottom: 3.3vw solid rgba(255, 255, 255, 0.5);
+    transform: translate(1.6vw, 0px) rotate(-135deg);
+  }
+
+  100% {
+    border-left: 3.3vw solid rgba(255, 255, 255, 0.5);
+    border-bottom: 3.3vw solid rgba(255, 255, 255, 0.5);
+    transform: translate(4.6vw, 0) rotate(-135deg);
+  }
+}
+
+.what {
+  position: absolute;
+  top: 6vw;
+  left: 30vw;
+}
+
+.your {
+  position: absolute;
+  top: 20vw;
+  left: 35vw;
+}
+
+.planet {
+  position: absolute;
+  top: 33.5vw;
+  left: 28vw;
+}
