--- a/COMPLETE/Soo/main/main.css
+++ b/COMPLETE/Soo/main/main.css
@@ -78,7 +78,7 @@ section.innerbox {
   left: 17.3vw;
   width: 42vw;
   height: 42vw;
-  background: linear-gradient(130deg, lightpink, rgb(179, 102, 102));
+  background: linear-gradient(130deg, rgb(255, 198, 206), rgb(221, 101, 201));
   border: 5px solid #f8f8f8;
   border-radius: 50%;
 }
